# jaccard-selector

./: README.md
GenomeAtScale/ctf/scalapack/EXAMPLE/: xcscaex  xdscaex  xsscaex  xzscaex
GenomeAtScale/jaccard-ctf/: Makefile  README.md  bitcount.h  config.mk  fasta_reader.cxx  file_reader.cxx  file_reader.h  jaccard.cxx
PGASOpenMP-to-Actor/: README.md  jaccard_kmer_pgasomp_selector.cpp
Selector/hclib/: README.md  clean.sh
Selector/hclib/locality_graphs/: node.json
Selector/hclib/modules/bale_actor/: LICENSE  Makefile  README
Selector/hclib/modules/bale_actor/docker/: Dockerfile
Selector/hclib/modules/bale_actor/inc/: hclib_bale_actor.h  hclib_bale_actor.post.mak  mytime.h  safe_buffer.h  selector.h  selector_shmem.h
Selector/hclib/modules/bale_actor/jaccard-selector/: Makefile  README  jaccard_kmer_locality_selector.cpp  jaccard_kmer_selector.cpp  kmer_matrix.mtx
Selector/hclib/modules/bale_actor/singularity/: README.md
Selector/hclib/modules/bale_actor/src/: hclib_bale_actor.cpp
Selector/hclib/modules/bale_actor/translator/: CMakeLists.txt  README.md  SelectorTrans.cpp
Selector/hclib/modules/openshmem/test/: hickok.slurm
Selector/hclib/src/: hclib-locality-graph.c  hclib-runtime.c
Selector/hclib/test/c/promise/: future2.c
Selector/hclib/test/cpp/: forasync3DRec.cpp
Selector/hclib/test/cpp/promise/: asyncAwait0.cpp
scripts/: GenomeAtScale_setup.sh  Selector_setup.sh  jaccard_ctf.sbatch  jaccard_selector.sbatch  modules.sh  perlmutter.patch  run.sh  setup.sh
